--- a/_posts/2019-03-11-k3s-homelab.md
+++ b/_posts/2019-03-11-k3s-homelab.md
@@ -14,7 +14,7 @@ tags:
   - Homelab
 ---
 
-이번에는 경량 Kubernetes라고 이야기하는 [K3s](https://github.com/rancher/k3s)를 Raspberry Pi 클러스터상에 구동하는 취미생활을 공유하는게 주 목적이다.  
+이번에는 경량 Kubernetes라고 이야기하는 [K3s](https://github.com/rancher/k3s)를 Raspberry Pi 클러스터상에 구동하려고 한다. 
 순수하게 개인의견으로 작성하였고 절대 제품이나 부품홍보를 하고자 하는 의도는 전혀 없다.
 
 ## K3s?
