--- a/_posts/2019-03-11-k3s-homelab.md
+++ b/_posts/2019-03-11-k3s-homelab.md
@@ -199,7 +199,7 @@ kube-system   traefik      LoadBalancer   10.43.19.160   192.168.1.14,192.168.1.
 ```
 
 Rancher쪽에서도 오늘날짜(3/12)로 F5가 Nginx를 인수하는것을 예견했던 것일까?  
-Service를 확인하면 traefik이 기본으로 되어있다. 아래처럼 기본적으로 loadbalancer로 활용되고 있는 treafik을 Helm Chart CRD를 통해 배포된것을 확인할 수 있다. 또한 얼마전 졸업한 CoreDNS도 보인다.   
+Service를 확인하면 traefik이 기본으로 되어있다. 아래처럼 기본적으로 loadbalancer로 활용되고 있는 traefik을 Helm Chart CRD를 통해 배포된것을 확인할 수 있다. 또한 얼마전 졸업한 CoreDNS도 보인다.   
 
 ```
 $ sudo k3s kubectl get pod --all-namespaces
