--- a/_posts/2018-07-06-cilium-1.md
+++ b/_posts/2018-07-06-cilium-1.md
@@ -2,6 +2,7 @@
 layout: single
 title: "Cilium"
 comments: true
+classes: wide
 description: "Cilium에 대해 알아봅니다"
 keywords: "Cilium, Kubernetes, k8s, network policy, minikube, istio, BPF, Networking and Security"
 categories:
