--- a/_posts/2018-07-26-dex.md
+++ b/_posts/2018-07-26-dex.md
@@ -2,6 +2,7 @@
 layout: single
 title: "Dex"
 comments: true
+classes: wide
 description: "Dex 대해 알아봅니다"
 keywords: "dex, identity service, Kubernetes, k8s, OIDC, connectors"
 categories:
