--- a/_posts/2018-08-01-knative.md
+++ b/_posts/2018-08-01-knative.md
@@ -2,6 +2,7 @@
 layout: single
 title: "knative"
 comments: true
+classes: wide
 description: "knative 대해 알아봅니다"
 keywords: "knative, Kubernetes, k8s, knative 이해, knative 구조, knative 설명"
 categories:
