--- a/_posts/2018-12-25-cloud.md
+++ b/_posts/2018-12-25-cloud.md
@@ -2,6 +2,7 @@
 layout: single
 title: "Cloud Enginner"
 comments: true
+classes: wide
 description: "Cloud Enginner"
 keywords: "Cloud Enginner"
 categories:
