--- a/_posts/2019-01-30-SRE.md
+++ b/_posts/2019-01-30-SRE.md
@@ -2,6 +2,7 @@
 layout: single
 title: "SRE (Site Reliablity Engineering)"
 comments: true
+classes: wide
 description: "SRE 소개"
 keywords: "SRE, DevOps"
 categories:
