--- a/_posts/2019-02-10-Hybrid.md
+++ b/_posts/2019-02-10-Hybrid.md
@@ -2,6 +2,7 @@
 layout: single
 title: "Hybrid Cloud"
 comments: true
+classes: wide
 description: "Hybrid Cloud"
 keywords: "Hybrid Cloud, Outpost, VMware, 하이브리드 클라우드"
 categories:
