--- a/_posts/2018-07-09-operator.md
+++ b/_posts/2018-07-09-operator.md
@@ -2,6 +2,7 @@
 layout: single
 title: "Operators & CRDs(CustomResourceDefinitions) on Kubernetes"
 comments: true
+classes: wide
 description: "Operators, CRD(Custom  
 Resource Definitions)에 대해서 알 수 있다."  
 keywords: "Operators, Kubernetes, k8s, CRDs, CustomResourceDefinitions"
