--- a/_posts/2019-03-11-k3s-homelab.md
+++ b/_posts/2019-03-11-k3s-homelab.md
@@ -2,6 +2,7 @@
 layout: single
 title: "K3s on Raspberry Pi Cluster"
 comments: true
+classes: wide
 description: "이번 포스트에서는 k3s를 라즈베리파이 클러스터에 올려보고 활용방안에 대해서 고민해본다"
 keywords: "Kubernetes, K3s, Raspberry Pi, Rancher"
 categories:
