--- a/_posts/2019-03-21-git-sync.md
+++ b/_posts/2019-03-21-git-sync.md
@@ -20,9 +20,9 @@ Kubernetes GitOps를 구현할수 있는 git-sync에 대해서 알아보자.
 
 [Kubernetes Github](https://github.com/kubernetes)에 방문하면 다양한 프로젝트들을 볼 수 있다.  
 [Kubernetes Project](https://github.com/kubernetes/kubernetes)부터 minikube, kubeadm, kubectl, kubelet, dashboard등 필수적으로 필요하거나 많이 사용되는 프로젝트를 볼 수 있는데,
-기존에 storage volume 으로 활용되던 [gitrepo](https://kubernetes.io/docs/concepts/storage/volumes/#gitrepo)가 `deprecated` 되어서 방법을 찾다가 공식 repo에서 우연히 발견하게 되었다.
+기존에 storage volume 으로 활용되던 [gitrepo](https://kubernetes.io/docs/concepts/storage/volumes/#gitrepo)가 `deprecated` 되어서 방법을 찾다가 유사한 프로젝트를 공식 repo에서 우연히 발견하게 되었다.  
 
-여러 프로젝트들중에 [git-sync](https://github.com/kubernetes/git-sync)는 sidecar 방식으로 git repository를 clone하는 아주 단순한 프로젝트이다.  
+[git-sync](https://github.com/kubernetes/git-sync)는 sidecar 방식으로 git repository를 clone하는 프로젝트이다.  
 
 최초 한번 clone도 가능하고 일정한 간격으로 정기적으로 끌어와서 응용프로그램에 사용할 수 있고 원하는 branch, Tag 또는 특정 git hash 기반으로 pulling이 가능하다.  
 
