--- a/_posts/2019-03-21-git-sync.md
+++ b/_posts/2019-03-21-git-sync.md
@@ -12,9 +12,11 @@ tags:
   - GitOps
   - Kubernetes
   - ssh git
+  - sidecar
+  - sidecar pattern
 ---
 
-Kubernetes GitOps를 구현할수 있는 git-sync에 대해서 알아보자.
+Kubernetes volume 형태처럼 git clone을 구현할수 있는 git-sync에 대해서 알아보자.
 
 ## git-sync
 
@@ -290,5 +292,10 @@ drwxr-sr-x    2 65533    nogroup       4096 Mar 21 13:40 rev-b125908649135856d79
 
 ## 정리
 git-sync를 간단하게 테스트해봤다.  
-[skaffold](https://github.com/GoogleContainerTools/skaffold), [draft](https://draft.sh/)와 같이 별도의 binary으로도 GitOps구현이 가능하겠지만 
-간단하게 `sidecar` 방식의 GitOps tool로서 `git-sync`는 충분히 활용이 가능할 것이다.
+간단하게 `sidecar` 방식의 clone tool로서 `git-sync`를 활용하면 여러가지로 충분히 활용이 가능할 것이다.  
+포스팅을 작성하면 떠오른 활용용도를 정리하면 아래와 같다. 어찌보면 sidecar pattern의 활용방안이라고도 볼수 있다.
+
+* CDN을 사용하지 않고 git에서 소규모로 컨텐츠를 가져올때
+* DBMS가 필요없을 정도의 적은 데이터를 가져올때
+* jekyll이나 hugo 같은 정적 사이트(블로그)의 sidecar 패턴 (GitPage처럼 markdown을 추가하고 git commit하면 바로 사이트에 반영되는 방식)
+* nginx, haproxy, apache와 같이 config 변경이 필요할때 webhook방식으로 설정을 변경한후 pod를 재기동하는 GitOps 구현
