git-sync.png 추가

--- a/_posts/2019-03-21-git-sync.md
+++ b/_posts/2019-03-21-git-sync.md
@@ -241,6 +241,8 @@ spec:
 
 간단한 nginx를 배포하고 접속하면 `Hello git-sync demo v1.0`를 확인할 수 있다.
 
+![nginx](/images/git-sync.png)  
+
 결국 git repo code (static html page)는 `/usr/share/nginx/html` 위치에 clone 되는것처럼 보이지만 
 실제 clone 위치를 확인해보면 symbolic link로 특정 revision dir를 가리키고 있다.
 
