--- a/_posts/2019-03-21-git-sync.md
+++ b/_posts/2019-03-21-git-sync.md
@@ -239,7 +239,7 @@ spec:
   ...
   ```
 
-간단한 nginx를 배포하고 접속하면 `Hello git-sync demo v1.0`를 확인할 수 있다.
+위 nginx를 배포하고 접속하면 `Hello git-sync demo v1.0`를 확인할 수 있다.
 
 ![nginx](/images/git-sync.png)  
 
