--- a/_posts/2019-03-21-git-sync.md
+++ b/_posts/2019-03-21-git-sync.md
@@ -16,7 +16,7 @@ tags:
   - sidecar pattern
 ---
 
-Kubernetes volume 형태처럼 git clone을 구현할수 있는 git-sync에 대해서 알아보자.
+git repo를 kubernetes volume으로 구현할수 있는 sidecar pattern `git-sync` 활용
 
 ## git-sync
 
