--- a/_posts/2019-03-21-git-sync.md
+++ b/_posts/2019-03-21-git-sync.md
@@ -16,7 +16,7 @@ tags:
   - sidecar pattern
 ---
 
-git repo를 kubernetes volume으로 구현할수 있는 sidecar pattern `git-sync` 활용
+git repo를 kubernetes volume으로 구현할수 있는 sidecar pattern `git-sync` 프로젝트에 대해서 알아본다.
 
 ## git-sync
 
