--- a/_posts/2019-05-11-v50.md
+++ b/_posts/2019-05-11-v50.md
@@ -1,16 +1,19 @@
 ---
 layout: single
-title: "V50과 5G"
+title: "V50과 U+5G 그리고 U+프로야구5G"
 comments: true
 classes: wide
-description: "LG V50 개봉 및 프리미엄 요금제 체험"
+description: "LG V50 개봉 및 5G프리미엄 요금제 체험"
 keywords: "ads"
 categories:
   - uplayers
 tags:
   - V50
+  - U+5G
+  - 유플러스
+  - 유플레이어스
+  - LGU+
   - 5G
-  - Uplayers
 ---
 
 ## V50 도착
