--- a/_posts/2019-06-10-CKAD-1.md
+++ b/_posts/2019-06-10-CKAD-1.md
@@ -25,16 +25,16 @@ CLI안에서 Manifest YAML파일을 작성하는것은 쉽지 않다. 특히 시
 
 위 링크를 잘 기억해놓고 실제 시험을 볼때 template작성을 위해 아래와 같이 Manifest를 해보는것이 가장 좋다.
 
-#### Pod Manifest YAML (--dry-run)
+#### Pod Manifest YAML
 ```sh
 $ kubectl run --generator=run-pod/v1 nginx --image=nginx --dry-run -o yaml
 ```
 
-#### Deployment YAML (--dry-run)
+#### Deployment YAML
 ```sh
 $ kubectl run --generator=deployment/v1beta1 nginx --image=nginx --dry-run --replicas=4 -o yaml
 ```
-#### YAML로 저장 (--dry-run)
+#### YAML로 저장
 ```sh
 $ kubectl run --generator=deployment/v1beta1 nginx --image=nginx --dry-run --replicas=4 -o yaml > nginx-deployment.yaml
 ```
