--- a/_posts/2019-06-18-circleci.md
+++ b/_posts/2019-06-18-circleci.md
@@ -1,9 +1,8 @@
 ---
 layout: single
-title: "CircleCI - GitHub 연동하여 EKS구성"
+title: "CircleCI - GitHub 연동 및 EKS 구성하기"
 comments: true
 classes: wide
-description: ""
 keywords: "DevOps, CI/CD, Pipeline, CircleCI, GitHub, GitOps, EKS"
 categories:
   - DevOps
