--- a/_posts/2020-01-03-2020plan.md
+++ b/_posts/2020-01-03-2020plan.md
@@ -14,7 +14,7 @@ tags:
   - Planning
 ---
 
-또 한해가 지나갔다. 2019년 회고 및 2020년 플래닝 시작한다.
+또 한해가 지나갔다. 2019년 한일 정리하면서 2020년 플랜 기록용으로 끄적거려본다.
 
 - Work
     - 18년도 까지 서비스 개발을 맡았지만 갑작스럽게 부서 이동으로 인해 FaaS 개발을 손을 떼고 신규 부서로 이전하게 되었다. 작년 초에도 큰 변화였는데 이번에도 더 큰 변화였다.
